# foambryo2D

./: License  README.md  setup.cfg
.ipynb_checkpoints/: Example_C_elegans-checkpoint.ipynb  README-checkpoint.md  Tension_inference-checkpoint.py  setup-checkpoint.cfg
src/foambryo2d/: Tension_inference.py  __init__.py
src/foambryo2d/.ipynb_checkpoints/: Tension_inference-checkpoint.py
